archive/manifests/radarr/radarr-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  labels:
    app: radarr
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - name: radarr
          image: ghcr.io/onedr0p/radarr:rolling@sha256:2de39930de91ae698f9461bb959d93b9d59610f88e0c026e96bc5d9c99aeea89
          envFrom: &envFrom
            - secretRef:
                name: radarr
          ports:
            - containerPort: 7878
              name: http-radarr
          livenessProbe: &probe
            httpGet:
              path: /ping
              port: http-radarr
            initialDelaySeconds: 10
            failureThreshold: 3
            periodSeconds: 60
            timeoutSeconds: 5
          readinessProbe: *probe
          resources:
            limits:
              memory: 500Mi
              cpu: 1000m
          volumeMounts:
            - mountPath: /config
              name: config-volume
            - name: nfs-vol
              mountPath: /data
      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: radarr-pvc
        - name: nfs-vol
          nfs:
            server: 192.168.1.93
            path: /mnt/data
            readOnly: false
