archive/manifests/radarr/radarr-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-local-allowlist@kubernetescrd,default-authelia-2fa@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - &host radarr.juicewizerd.com
      secretName: juicewizerd-le-com-tls
  rules:
    - host: *host
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 80
